syntax = "proto3";
import "google/protobuf/timestamp.proto";

package auth;

service UserService {
    rpc CreateUser(CreateUserRequest) returns (User) {}
    rpc FindAllUsers(Empty) returns (Users) {}
    rpc FindOneUser(FindOneUserRequest) returns (User) {}
    rpc UpdateUser(UpdateUserRequest) returns (User) {}
    rpc RemoveUser(FindOneUserRequest) returns (User) {}
    rpc UserProfileEdit(UserProfileEditRequest) returns (User) {}
    rpc UpdateProfilePicture(UpdateProfilePictureRequest) returns (User) {}
    rpc Logout(Empty) returns (Empty) {}
    rpc VerifyOTP(VerifyOTPRequest) returns (Empty) {}
    rpc ForgotPassword(ForgotPasswordRequest) returns (Empty) {}
    rpc ResetPassword(ResetPasswordRequest) returns (Empty) {}
    rpc QueryManyUsers(QueryManyUsersRequest) returns (PaginatedUsers) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Signup(SignupRequest) returns (Empty) {}
}

message Error {
    string code = 1;
    string message = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message SignupRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message LoginResponse{
    string token = 1;
    Error error = 2;
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
    string category = 4;
    string profile_picture= 5;
}

message UpdateUserRequest {
    string email = 1;
    string username = 2;
    string category = 3;
    // Admin can update these fields
    string role = 4;
    string status = 5;
}

message UserProfileEditRequest {
    string email = 1;
    string username = 2;
    string category = 3;
}

message UpdateProfilePictureRequest {
    string profile_picture = 1;
}

message VerifyOTPRequest {
    string otp = 1;
}

message ForgotPasswordRequest {
    string email = 1;
}

message ResetPasswordRequest {
    string id = 1;
    string new_password = 2;
}

message FindOneUserRequest {
    string id = 1;
}

message User {
    int32 id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
    string category = 5;
    string profile_picture = 6;
    // Additional fields like role and status
    string role = 7;
    string status = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
}

message Otp{
    int32 id=1;
    string code=2;
    google.protobuf.Timestamp expires = 3;
    bool used = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message Empty {}

message Users {
    repeated User users = 1;
}

message QueryManyUsersRequest {
    int32 page_number = 1;
    int32 page_size = 2;
    string sort_by = 3;
    bool ascending = 4;
    string filter_by = 5;
    string filter_value = 6;
}

message PaginatedUsers {
    repeated User users = 1;
    int32 total_users = 2;
}




